boards: adrv9009_pcbz: include jesd204 parameters in template
Signed-off-by: Liam Beguin <liambeguin@gmail.com>

--- a/adidt/templates/adi-adrv9009.dtsi
+++ b/adidt/templates/adi-adrv9009.dtsi
@@ -129,72 +129,72 @@
 		/* JESD204 */
 
 		/* JESD204 RX */
-		adi,jesd204-framer-a-bank-id = <1>;
-		adi,jesd204-framer-a-device-id = <0>;
-		adi,jesd204-framer-a-lane0-id = <0>;
-		adi,jesd204-framer-a-m = <4>;
-		adi,jesd204-framer-a-k = <32>;
-		adi,jesd204-framer-a-f = <4>;
-		adi,jesd204-framer-a-np = <16>;
-		adi,jesd204-framer-a-scramble = <1>;
-		adi,jesd204-framer-a-external-sysref = <1>;
-		adi,jesd204-framer-a-serializer-lanes-enabled = <0x03>;
-		adi,jesd204-framer-a-serializer-lane-crossbar = <0xE4>;
-		adi,jesd204-framer-a-lmfc-offset = <31>;
-		adi,jesd204-framer-a-new-sysref-on-relink = <0>;
-		adi,jesd204-framer-a-syncb-in-select = <0>;
-		adi,jesd204-framer-a-over-sample = <0>;
-		adi,jesd204-framer-a-syncb-in-lvds-mode = <1>;
-		adi,jesd204-framer-a-syncb-in-lvds-pn-invert = <0>;
-		adi,jesd204-framer-a-enable-manual-lane-xbar = <0>;
+		adi,jesd204-framer-a-bank-id = <{{ jesd204['framerA']['bankId'] }}>;
+		adi,jesd204-framer-a-device-id = <{{ jesd204['framerA']['deviceId'] }}>;
+		adi,jesd204-framer-a-lane0-id = <{{ jesd204['framerA']['lane0Id'] }}>;
+		adi,jesd204-framer-a-m = <{{ jesd204['framerA']['M'] }}>;
+		adi,jesd204-framer-a-k = <{{ jesd204['framerA']['K'] }}>;
+		adi,jesd204-framer-a-f = <{{ jesd204['framerA']['F'] }}>;
+		adi,jesd204-framer-a-np = <{{ jesd204['framerA']['Np'] }}>;
+		adi,jesd204-framer-a-scramble = <{{ jesd204['framerA']['scramble'] }}>;
+		adi,jesd204-framer-a-external-sysref = <{{ jesd204['framerA']['externalSysref'] }}>;
+		adi,jesd204-framer-a-serializer-lanes-enabled = <{{ jesd204['framerA']['serializerLanesEnabled'] }}>;
+		adi,jesd204-framer-a-serializer-lane-crossbar = <{{ jesd204['framerA']['serializerLaneCrossbar'] }}>;
+		adi,jesd204-framer-a-lmfc-offset = <{{ jesd204['framerA']['lmfcOffset'] }}>;
+		adi,jesd204-framer-a-new-sysref-on-relink = <{{ jesd204['framerA']['newSysrefOnRelink'] }}>;
+		adi,jesd204-framer-a-syncb-in-select = <{{ jesd204['framerA']['syncbInSelect'] }}>;
+		adi,jesd204-framer-a-over-sample = <{{ jesd204['framerA']['overSample'] }}>;
+		adi,jesd204-framer-a-syncb-in-lvds-mode = <{{ jesd204['framerA']['syncbInLvdsMode'] }}>;
+		adi,jesd204-framer-a-syncb-in-lvds-pn-invert = <{{ jesd204['framerA']['syncbInLvdsPnInvert'] }}>;
+		adi,jesd204-framer-a-enable-manual-lane-xbar = <{{ jesd204['framerA']['enableManualLaneXbar'] }}>;
 
 		/* JESD204 OBS */
-		adi,jesd204-framer-b-bank-id = <0>;
-		adi,jesd204-framer-b-device-id = <0>;
-		adi,jesd204-framer-b-lane0-id = <0>;
-		adi,jesd204-framer-b-m = <4>;
-		adi,jesd204-framer-b-k = <32>;
-		adi,jesd204-framer-b-f = <4>;
-		adi,jesd204-framer-b-np = <16>;
-		adi,jesd204-framer-b-scramble = <1>;
-		adi,jesd204-framer-b-external-sysref = <1>;
-		adi,jesd204-framer-b-serializer-lanes-enabled = <0x0C>;
-		adi,jesd204-framer-b-serializer-lane-crossbar = <0xE4>;
-		adi,jesd204-framer-b-lmfc-offset = <31>;
-		adi,jesd204-framer-b-new-sysref-on-relink = <0>;
-		adi,jesd204-framer-b-syncb-in-select = <1>;
-		adi,jesd204-framer-b-over-sample = <0>;
-		adi,jesd204-framer-b-syncb-in-lvds-mode = <1>;
-		adi,jesd204-framer-b-syncb-in-lvds-pn-invert = <0>;
-		adi,jesd204-framer-b-enable-manual-lane-xbar = <0>;
+		adi,jesd204-framer-b-bank-id = <{{ jesd204['framerB']['bankId'] }}>;
+		adi,jesd204-framer-b-device-id = <{{ jesd204['framerB']['deviceId'] }}>;
+		adi,jesd204-framer-b-lane0-id = <{{ jesd204['framerB']['lane0Id'] }}>;
+		adi,jesd204-framer-b-m = <{{ jesd204['framerB']['M'] }}>;
+		adi,jesd204-framer-b-k = <{{ jesd204['framerB']['K'] }}>;
+		adi,jesd204-framer-b-f = <{{ jesd204['framerB']['F'] }}>;
+		adi,jesd204-framer-b-np = <{{ jesd204['framerB']['Np'] }}>;
+		adi,jesd204-framer-b-scramble = <{{ jesd204['framerB']['scramble'] }}>;
+		adi,jesd204-framer-b-external-sysref = <{{ jesd204['framerB']['externalSysref'] }}>;
+		adi,jesd204-framer-b-serializer-lanes-enabled = <{{ jesd204['framerB']['serializerLanesEnabled'] }}>;
+		adi,jesd204-framer-b-serializer-lane-crossbar = <{{ jesd204['framerB']['serializerLaneCrossbar'] }}>;
+		adi,jesd204-framer-b-lmfc-offset = <{{ jesd204['framerB']['lmfcOffset'] }}>;
+		adi,jesd204-framer-b-new-sysref-on-relink = <{{ jesd204['framerB']['newSysrefOnRelink'] }}>;
+		adi,jesd204-framer-b-syncb-in-select = <{{ jesd204['framerB']['syncbInSelect'] }}>;
+		adi,jesd204-framer-b-over-sample = <{{ jesd204['framerB']['overSample'] }}>;
+		adi,jesd204-framer-b-syncb-in-lvds-mode = <{{ jesd204['framerB']['syncbInLvdsMode'] }}>;
+		adi,jesd204-framer-b-syncb-in-lvds-pn-invert = <{{ jesd204['framerB']['syncbInLvdsPnInvert'] }}>;
+		adi,jesd204-framer-b-enable-manual-lane-xbar = <{{ jesd204['framerB']['enableManualLaneXbar'] }}>;
 
 		/* JESD204 TX */
-		adi,jesd204-deframer-a-bank-id = <0>;
-		adi,jesd204-deframer-a-device-id = <0>;
-		adi,jesd204-deframer-a-lane0-id = <0>;
-		adi,jesd204-deframer-a-m = <4>;
-		adi,jesd204-deframer-a-k = <32>;
-		adi,jesd204-deframer-a-scramble = <1>;
-		adi,jesd204-deframer-a-external-sysref = <1>;
-		adi,jesd204-deframer-a-deserializer-lanes-enabled = <0x0F>;
-		adi,jesd204-deframer-a-deserializer-lane-crossbar = <0xE4>;
-		adi,jesd204-deframer-a-lmfc-offset = <17>;
-		adi,jesd204-deframer-a-new-sysref-on-relink = <0>;
-		adi,jesd204-deframer-a-syncb-out-select = <0>;
-		adi,jesd204-deframer-a-np = <16>;
-		adi,jesd204-deframer-a-syncb-out-lvds-mode = <1>;
-		adi,jesd204-deframer-a-syncb-out-lvds-pn-invert = <0>;
-		adi,jesd204-deframer-a-syncb-out-cmos-slew-rate = <0>;
-		adi,jesd204-deframer-a-syncb-out-cmos-drive-level = <0>;
-		adi,jesd204-deframer-a-enable-manual-lane-xbar = <0>;
+		adi,jesd204-deframer-a-bank-id = <{{ jesd204['deframerA']['bankId'] }}>;
+		adi,jesd204-deframer-a-device-id = <{{ jesd204['deframerA']['deviceId'] }}>;
+		adi,jesd204-deframer-a-lane0-id = <{{ jesd204['deframerA']['lane0Id'] }}>;
+		adi,jesd204-deframer-a-m = <{{ jesd204['deframerA']['M'] }}>;
+		adi,jesd204-deframer-a-k = <{{ jesd204['deframerA']['K'] }}>;
+		adi,jesd204-deframer-a-scramble = <{{ jesd204['deframerA']['scramble'] }}>;
+		adi,jesd204-deframer-a-external-sysref = <{{ jesd204['deframerA']['externalSysref'] }}>;
+		adi,jesd204-deframer-a-deserializer-lanes-enabled = <{{ jesd204['deframerA']['deserializerLanesEnabled'] }}>;
+		adi,jesd204-deframer-a-deserializer-lane-crossbar = <{{ jesd204['deframerA']['deserializerLaneCrossbar'] }}>;
+		adi,jesd204-deframer-a-lmfc-offset = <{{ jesd204['deframerA']['lmfcOffset'] }}>;
+		adi,jesd204-deframer-a-new-sysref-on-relink = <{{ jesd204['deframerA']['newSysrefOnRelink'] }}>;
+		adi,jesd204-deframer-a-syncb-out-select = <{{ jesd204['deframerA']['syncbOutSelect'] }}>;
+		adi,jesd204-deframer-a-np = <{{ jesd204['deframerA']['Np'] }}>;
+		adi,jesd204-deframer-a-syncb-out-lvds-mode = <{{ jesd204['deframerA']['syncbOutLvdsMode'] }}>;
+		adi,jesd204-deframer-a-syncb-out-lvds-pn-invert = <{{ jesd204['deframerA']['syncbOutLvdsPnInvert'] }}>;
+		adi,jesd204-deframer-a-syncb-out-cmos-slew-rate = <{{ jesd204['deframerA']['syncbOutCmosSlewRate'] }}>;
+		adi,jesd204-deframer-a-syncb-out-cmos-drive-level = <{{ jesd204['deframerA']['syncbOutCmosDriveLevel'] }}>;
+		adi,jesd204-deframer-a-enable-manual-lane-xbar = <{{ jesd204['deframerA']['enableManualLaneXbar'] }}>;
 
-		adi,jesd204-ser-amplitude = <15>;
-		adi,jesd204-ser-pre-emphasis = <1>;
-		adi,jesd204-ser-invert-lane-polarity = <0>;
-		adi,jesd204-des-invert-lane-polarity = <0>;
-		adi,jesd204-des-eq-setting = <1>;
-		adi,jesd204-sysref-lvds-mode = <1>;
-		adi,jesd204-sysref-lvds-pn-invert = <0>;
+		adi,jesd204-ser-amplitude = <{{ jesd204['serAmplitude'] }}>;
+		adi,jesd204-ser-pre-emphasis = <{{ jesd204['serPreEmphasis'] }}>;
+		adi,jesd204-ser-invert-lane-polarity = <{{ jesd204['serInvertLanePolarity'] }}>;
+		adi,jesd204-des-invert-lane-polarity = <{{ jesd204['desInvertLanePolarity'] }}>;
+		adi,jesd204-des-eq-setting = <{{ jesd204['desEqSetting'] }}>;
+		adi,jesd204-sysref-lvds-mode = <{{ jesd204['sysrefLvdsMode'] }}>;
+		adi,jesd204-sysref-lvds-pn-invert = <{{ jesd204['sysrefLvdsPnInvert'] }}>;
 
 		/* RX */
 
